# OpenFace

./: .gitignore  CMakeLists.txt  NOTAS.md
exe/FacePreDetectionImg/: CMakeLists.txt  FacePreDetectionImg.cpp
exe/FacePreDetectionImgDaemon/: CMakeLists.txt  FacePreDetectionImgDaemon.cpp
lib/local/FaceAnalyser/include/: FaceAnalyser.h
lib/local/Utilities/: CMakeLists.txt
lib/local/Utilities/include/: FacePreDetectionImageCapture.h  RecorderPreDetection.h  Visualizer.h
lib/local/Utilities/src/: FacePreDetectionImageCapture.cpp  RecorderPreDetection.cpp  Visualizer.cpp
